--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -247,9 +247,9 @@
             </div>
         </section>
         <section id="praw">
-            <p class="main">JAN</p>
+            <p class="main">MACIEJ</p>
             <p class="sub">Imię (Imiona)</p><br>
-            <p class="main">SZLAMA</p>
+            <p class="main">KORZYM</p>
             <p class="sub">Nazwiskо</p><br>
             <p>POLSKIE</p>
             <p class="sub">Obywatelstwo</p><br>
